# wasmio

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.yaml  bacon.toml  release-plz.toml  wasmer-net  wasmer.toml
.github/workflows/: build-release.yml  ci.yml
app/wasmio/: Cargo.toml  wasmer.toml
app/wasmio/src/: lib.rs  main.rs
app/wasmio/src/application/: mapping.rs  mod.rs  state.rs
app/wasmio/src/application/s3/: context.rs  errors.rs  headers.rs  mapping.rs  mod.rs  path.rs  serde_types.rs  state.rs
app/wasmio/src/application/s3/axum/: mod.rs  request_context.rs
app/wasmio/src/application/s3/handlers/: bucket_create.rs  mod.rs  object_attributes.rs  object_delete.rs  object_get.rs  object_list.rs  object_list_v2.rs  object_put.rs
app/wasmio/src/application/s3/methods/: bucket_create.rs  mod.rs  object_delete.rs  object_put.rs
app/wasmio/src/application/s3/snapshots/: wasmio__application__s3__errors__tests__simple_response_error.snap  wasmio__application__s3__path__tests__parse_s3_path-2.snap  wasmio__application__s3__path__tests__parse_s3_path_bucket_2.snap  wasmio__application__s3__path__tests__parse_s3_path_fail.snap  wasmio__application__s3__path__tests__parse_s3_path_fail_2.snap  wasmio__application__s3__path__tests__parse_s3_path_fail_3.snap  wasmio__application__s3__path__tests__parse_s3_path_fail_4.snap  wasmio__application__s3__path__tests__parse_s3_path_object.snap  wasmio__application__s3__path__tests__parse_s3_path_root.snap
app/wasmio/src/domain/: mod.rs
app/wasmio/src/domain/bucket/: mod.rs
app/wasmio/src/domain/storage/: errors.rs  mod.rs
app/wasmio/src/infrastructure/: constant.rs  mod.rs
app/wasmio/src/infrastructure/axum/: bucket.rs  headers.rs  mod.rs
app/wasmio/src/infrastructure/config/: mod.rs  storage.rs
app/wasmio/src/infrastructure/instrumentation/: mod.rs
app/wasmio/src/infrastructure/storage/: .mod.rs.pending-snap  database.rs  element.rs  fs_storage.rs  mod.rs
app/wasmio/src/infrastructure/storage/snapshots/: wasmio__infrastructure__storage__tests__simple_db_with_fs.snap
app/wasmio/tests/: simple_flow.rs
app/wasmio/tests/utils/: mod.rs  port_picker.rs
lib/serde_aws_types/: Cargo.toml
lib/serde_aws_types/src/types/: create_bucket_configuration.rs  delete_object.rs  mod.rs  put_object.rs
lib/wasmio-aws-types/: Cargo.toml
lib/wasmio-aws-types/src/: README.md
lib/wasmio-aws-types/src/types/: common.rs  create_bucket_configuration.rs  delete_object.rs  get_object.rs  get_object_attributes.rs  list_object.rs  list_object_v2.rs  mod.rs  object.rs  owner.rs  put_object.rs
public/: config.local.toml  config.wasmer.local.toml
