[workspace]
resolver = "2"

members = [
  "app/wasmio",
]

[workspace.package]
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miaxos/wasmio/"

[workspace.dependencies]
anyhow = "1"
axum = { version = "=0.6", features = ["tokio", "json"] }
bytes = "1"
config = "0.14"
derive_builder = "0.13"
dotenv = "0.15"
futures = "0.3"
monoio = "0.2.2"
insta = { version = "1", features = ["yaml"] }
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"


# NOTE: We need to pin and replace some dependencies to achieve wasix compatibility.
tokio = { version = "=1.24.2", default-features = false, features = ["full"] }
parking_lot = { version = "=0.12.1", features = ["nightly"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "master" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.21.5" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "v0.8.9" }
