[workspace]
resolver = "2"

members = [
  "app/wasmio",
]

[workspace.package]
authors = ["Anthony Griffon <anthony@griffon.one>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/miaxos/wasmio/"

[workspace.dependencies]
anyhow = "1"
axum = { version = "=0.7", features = ["tokio", "json"] }
bytes = "1"
config = "0.14"
derive_builder = "0.13"
dotenv = "0.15"
futures = "0.3"
monoio = "0.2.2"
insta = { version = "1", features = ["yaml"] }
serde = "1"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"


hyper = "=0.14"
# NOTE: We need to pin and replace some dependencies to achieve wasix compatibility.
tokio = { version = "=1.35", default-features = false }
tokio-util = "0.7"
parking_lot = { version = "=0.12.1", features = ["nightly"] }

serde_aws_types = { path = "./lib/serde_aws_types" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
opt-level = 3
debug-assertions = false
overflow-checks = false
incremental = false

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5.5" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "v0.2.152" }
tokio = { git = "https://github.com/miaxos/tokio.git", branch = "wasix-1.35.1-fs" }
tokio-util = { git = "https://github.com/miaxos/tokio.git", branch = "wasix-1.35.1-fs" }
rustls = { git = "https://github.com/wasix-org/rustls.git", branch = "v0.22.2" }
rustls-native-certs = { git = "https://github.com/wasix-org/rustls-native-certs.git", branch = "v0.6.3" }
hyper-rustls = { git = "https://github.com/wasix-org/hyper-rustls.git", branch = "v0.25.0" }
hyper-tls = { git = "https://github.com/wasix-org/hyper-tls.git", branch = "master" }
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28" }
h2 = { git = "https://github.com/wasix-org/h2.git", branch = "v0.4.0" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "v0.8.9" }
ring = { git = "https://github.com/wasix-org/ring.git", branch = "0.17.7" }

[patch."https://github.com/wasix-org/tokio.git"]
tokio = { git = "https://github.com/miaxos/tokio.git", branch = "wasix-1.35.1-fs" }
