[package]
name = "wasmio"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WasmIO a S3 Implementation on steroid"
readme = "README.md"
keywords = [
    "wasm",
    "wasi",
    "s3",
]
categories = ["network-programming"]

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-serde = { version = "0.2", features = ["xml"] }

config.workspace = true
dotenv = "0.15"
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_aws_types.workspace = true

hyper.workspace = true

parking_lot = { version = "=0.12.1", features = ["nightly"] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "net",
    "signal",
] }

tower = { workspace = true, features = ["make", "log"] }
tower-http = { workspace = true, features = ["trace", "add-extension", "timeout", "limit"] }

tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing.workspace = true

[build-dependencies]
chrono = "0.4.33"
