[package]
name = "wasmio"
version = "0.0.9"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WasmIO a S3 Implementation on steroid"
readme = "../../README.md"
keywords = [
    "wasm",
    "wasi",
    "s3",
]
categories = ["network-programming"]

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = { workspace = true, features = ["macros"] }
axum-serde = { version = "0.2", features = ["xml"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

base64ct = { version = "1", features = ["alloc"] }

config.workspace = true
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures.workspace = true
headers = "0.4"

quick-xml = { version = "0.31", features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
wasmio-aws-types.workspace = true
serde_json = "1"

hyper.workspace = true

parking_lot = { version = "=0.12.1", features = ["nightly"] }

sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "net",
    "signal",
] }
tokio-util = { workspace = true, features = ["io"] }

tower = { workspace = true, features = ["make", "log"] }
tower-http = { workspace = true, features = ["trace", "add-extension", "timeout", "limit"] }

tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing.workspace = true

ulid = "1"

[build-dependencies]
chrono = "0.4.33"

[dev-dependencies]
tempfile = "3"
insta = "1"
