[package]
name = "wasmio-aws-types"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AWS Types with serde"

[dependencies]
axum.workspace = true
derivative = "2"
derive_builder = "0.13"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, default-features = false }

[build-dependencies]
